--- a/css/styles.css
+++ b/css/styles.css
@@ -4052,6 +4052,7 @@ input[type=button].btn-block {
   width: 267px;
   background-image: url("logo-lantos.svg");
   background-repeat: no-repeat;
+  background-size: cover;
 }
 .navbar-brand:hover, .navbar-brand:focus {
   text-decoration: none;
@@ -4337,7 +4338,7 @@ input[type=button].btn-block {
 }
 .navbar-light .navbar-toggler {
   color: rgba(0, 0, 0, 0.5);
-  border-color: rgba(0, 0, 0, 0.1);
+  border-color: none;
 }
 .navbar-light .navbar-toggler-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
@@ -10121,13 +10122,13 @@ body {
 
 #mainNav {
   min-height: 3.5rem;
-  background-color: #fff;
+  background-color: transparent;
 }
 #mainNav .navbar-toggler {
-  font-size: 80%;
-  padding: 0.75rem;
-  color: #64a19d;
-  border: 1px solid #64a19d;
+  font-size: 200%;
+  padding: 1rem;
+  color: #fff;
+  margin-right: 1rem;
 }
 #mainNav .navbar-toggler:focus {
   outline: none;
@@ -10244,6 +10245,7 @@ body {
   padding-top: 2rem;
   padding-bottom: 5rem;
   background: #088484;
+  text-align: center!important;
 }
 .why-section {
   padding: 5rem 0;
@@ -10325,4 +10327,88 @@ body {
 
 .slick-dots li button:before {
   color:#fff!important;
+}
+
+h2 img {
+  opacity: 46%;
+}
+
+.divider-mobile {
+  display: none;
+}
+
+.mobile {
+  display:none!important;
+}
+
+@media only screen and (max-width: 600px) {
+  .navbar-brand{
+    width: 177px;
+    height: 47px;
+  }
+  .masthead {
+    padding-top: 50vh;
+    padding-bottom: 10vh;
+  }
+  .masthead .container {
+    padding: 0 2rem;
+  }
+  .masthead h1 {
+    font-weight: bold;
+    text-align: left;
+    margin-bottom: 1.5rem;
+  }
+  .masthead h2 {
+    text-align: left;
+    font-size: 1.05rem;
+  }
+  .container-txt {
+    text-align: center;
+  }
+  .btn-primary {
+    color:#fff;
+  }
+  .about-section {
+    text-align: left!important;
+    padding: 2rem 1rem;
+  }
+  .btn-gradient {
+    background: linear-gradient(90deg, rgba(23,132,131,1) 0%, rgba(83,224,210,1) 100%);
+    border: none!important;
+    box-shadow: 0px 6px 10px 0px rgba(0,0,41,0.18);
+  }
+  .mobile-no {
+    display: none!important;
+  }
+  .divider-mobile {
+    display: block;
+  }
+  .why-section {
+    padding: 2rem 1rem;
+  }
+  h3.text-orange {
+    color:#000;
+  }
+  .mobile {
+    display: block!important;
+  }
+  .slick-dots li.slick-active button:before{
+    color: #000!important;
+  }
+  .slick-dots li button:before {
+    color: #000!important;
+  }
+  .contact-section {
+    background: #fff;
+    padding: 2rem 1rem;
+  }
+  .divider-white {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    border: 0;
+    border-top: 1px solid #fff;
+    box-sizing: content-box;
+    height: 0;
+    overflow: visible;
+  }
 }
