--- a/css/styles.css
+++ b/css/styles.css
@@ -362,7 +362,7 @@ template {
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-bottom: 0.5rem;
-  font-weight: 500;
+  font-weight: 400;
   line-height: 1.2;
 }
 
@@ -2460,12 +2460,14 @@ fieldset:disabled a.btn {
 }
 
 .btn-primary {
-  color: #3A3A3A;
-  background-color: #4AE1D2;
+  color:#fff;
+  background: linear-gradient(90deg, rgba(23,132,131,1) 0%, rgba(83,224,210,1) 100%);
+  border: none;
+  box-shadow: 0px 6px 10px 0px rgba(0,0,41,0.18);
 }
 .btn-primary:hover {
   color: #3A3A3A;
-  background-color: #35B9AC;
+  background: #fff;
 }
 .btn-primary:focus, .btn-primary.focus {
   color: #3A3A3A;
@@ -4050,7 +4052,7 @@ input[type=button].btn-block {
   white-space: nowrap;
   height: 71px;
   width: 267px;
-  background-image: url("logo-lantos.svg");
+  background-image: url("../assets/img/logo-lantos.svg");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -10177,7 +10179,7 @@ body {
     padding-bottom: .75rem;
     }
   #mainNav.navbar-shrink .navbar-brand {
-    background-image: url("logo-lantos-black.svg");
+    background-image: url("../assets/img/logo-lantos-black.svg");
   }
   #mainNav.navbar-shrink .nav-link {
     color: #000000;
@@ -10215,10 +10217,12 @@ body {
   font-size: 2.5rem;
   line-height: 2.5rem;
   color: #FF7300;
+  font-weight: 500;
 }
 .masthead h2 {
   max-width: 20rem;
   font-size: 1rem;
+  font-weight: 300;
 }
 @media (min-width: 768px) {
   .masthead h1 {
@@ -10244,13 +10248,16 @@ body {
 .about-section {
   padding-top: 2rem;
   padding-bottom: 5rem;
-  background: #088484;
+  background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(22,126,125,1) 100%);
   text-align: center!important;
+  font-size: 1.1rem;
 }
 .why-section {
   padding: 5rem 0;
   padding-bottom: 7rem;
-  background: #FFFFF7;
+  background: #FFFFFF;
+  font-size: 1.2rem;
+  font-weight: 400;
 }
 .why-section .featured-text {
   padding: 2rem;
@@ -10279,10 +10286,10 @@ body {
 .team-section {
   padding: 5rem 0;
   background: #FF7300;
-  background-position: center;
+  background-image: url("../assets/img/back-resource.svg");
+  background-position: -23vw -34vh;
   background-repeat: no-repeat;
-  background-attachment: scroll;
-  background-size: cover;
+  background-size: auto;
 }
 .team-section .form-inline input {
   box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
@@ -10296,21 +10303,26 @@ body {
 }
 
 .contact-section {
-  padding: 5rem 0;
+  padding: 2rem 0;
+  margin-top: -1.5rem;
   background:#FFFFF7;
+  background-image: url("../assets/img/back-resource-2.svg");
+  background-position: 59vw -7vh;
+  background-repeat: no-repeat;
+  background-size: auto;
 }
 
 
 .footer {
-  padding: 5rem 0;
+  padding: 1rem 0;
 }
 
 /* main css */
 .mt-6 {
   margin-top: 4rem;
 }
-.text-orange {
-  color: #FF7300;
+.text-mint {
+  color: #088484;
 }
 .img-team {
   width: 50%;
@@ -10324,22 +10336,37 @@ body {
   color:#fff!important;
   opacity: 100;
 }
-
 .slick-dots li button:before {
   color:#fff!important;
 }
-
 h2 img {
   opacity: 46%;
 }
-
+.divider-desktop {
+  display: block;
+}
 .divider-mobile {
   display: none;
 }
-
 .mobile {
   display:none!important;
 }
+.medium {
+  font-weight: 400;
+}
+.mb-05{
+  margin-bottom: 0.5rem!important;
+}
+.hr-divider-grey {
+  width: 10vw;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border-top: 1px solid #ACACAC; }
+.hr-divider-white {
+  width: 10vw;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border-top: 1px solid #fff; }
 
 @media only screen and (max-width: 600px) {
   .navbar-brand{
@@ -10354,7 +10381,6 @@ h2 img {
     padding: 0 2rem;
   }
   .masthead h1 {
-    font-weight: bold;
     text-align: left;
     margin-bottom: 1.5rem;
   }
@@ -10365,17 +10391,16 @@ h2 img {
   .container-txt {
     text-align: center;
   }
-  .btn-primary {
-    color:#fff;
-  }
   .about-section {
-    text-align: left!important;
-    padding: 2rem 1rem;
+  padding: 2rem 1rem;
+  background: #088484;
+  margin-top: -1vw;
   }
-  .btn-gradient {
-    background: linear-gradient(90deg, rgba(23,132,131,1) 0%, rgba(83,224,210,1) 100%);
-    border: none!important;
-    box-shadow: 0px 6px 10px 0px rgba(0,0,41,0.18);
+  .about-section p{
+    text-align: left!important;
+  }
+  .about-section p.medium{
+    text-align: center!important;
   }
   .mobile-no {
     display: none!important;
@@ -10383,9 +10408,14 @@ h2 img {
   .divider-mobile {
     display: block;
   }
+  .divider-desktop{
+    display: none;
+  }
   .why-section {
     padding: 2rem 1rem;
+    background: #FFFFF7;
   }
+
   h3.text-orange {
     color:#000;
   }
@@ -10402,13 +10432,15 @@ h2 img {
     background: #fff;
     padding: 2rem 1rem;
   }
-  .divider-white {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    border: 0;
-    border-top: 1px solid #fff;
-    box-sizing: content-box;
-    height: 0;
-    overflow: visible;
+  .masthead {
+    background: url("../assets/img/black-hero-mobile.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: cover;
   }
+  .hr-divider-grey {
+    width: 40vw; }
+  .hr-divider-white {
+    width: 40vw; }
 }
