--- a/css/styles.css
+++ b/css/styles.css
@@ -371,7 +371,7 @@ h1, .h1 {
 }
 
 h2, .h2 {
-  font-size: 2.5rem;
+  font-size: 2rem;
 }
 
 h3, .h3 {
@@ -1994,7 +1994,7 @@ pre code {
   color: #495057;
   background-color: unset;
   background-clip: padding-box;
-  border-bottom: 1px solid #088484;
+  border-bottom: 1px solid #9A9A9A;
   border-top: unset;
   border-right: unset;
   border-left: unset;
@@ -2429,7 +2429,7 @@ textarea.form-control {
           user-select: none;
   background-color: transparent;
   border: 1px solid transparent;
-  padding: .7rem 1.5rem;
+  padding: .7rem 1rem;
   font-size: 1rem;
   line-height: 1.5;
   border-radius: 25px;
@@ -4054,7 +4054,7 @@ input[type=button].btn-block {
   width: 267px;
   background-image: url("../assets/img/logo-lantos.svg");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
 }
 .navbar-brand:hover, .navbar-brand:focus {
   text-decoration: none;
@@ -7573,6 +7573,10 @@ button.bg-black:focus {
   height: 75% !important;
 }
 
+.h-90 {
+  height: 90% !important;
+}
+
 .h-100 {
   height: 100% !important;
 }
@@ -10123,7 +10127,7 @@ body {
 }
 
 #mainNav {
-  min-height: 3.5rem;
+  min-height: 5.5rem;
   background-color: transparent;
 }
 #mainNav .navbar-toggler {
@@ -10141,7 +10145,6 @@ body {
   padding: 0.9rem 0;
 }
 #mainNav .navbar-nav .nav-item:hover {
-  color: fade(#fff, 80%);
   outline: none;
   background-color: transparent;
 }
@@ -10176,7 +10179,7 @@ body {
   }
   #mainNav.navbar-shrink {
     background-color: #fff;
-    padding-bottom: .75rem;
+    /* padding-bottom: .75rem; */
     }
   #mainNav.navbar-shrink .navbar-brand {
     background-image: url("../assets/img/logo-lantos-black.svg");
@@ -10217,7 +10220,7 @@ body {
   font-size: 2.5rem;
   line-height: 2.5rem;
   color: #FF7300;
-  font-weight: 500;
+  font-weight: 500!important;
 }
 .masthead h2 {
   max-width: 20rem;
@@ -10246,7 +10249,7 @@ body {
 }
 
 .about-section {
-  padding-top: 2rem;
+  padding-top: 0;
   padding-bottom: 5rem;
   background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(22,126,125,1) 100%);
   text-align: center!important;
@@ -10286,10 +10289,7 @@ body {
 .team-section {
   padding: 5rem 0;
   background: #FF7300;
-  background-image: url("../assets/img/back-resource.svg");
-  background-position: -23vw -34vh;
-  background-repeat: no-repeat;
-  background-size: auto;
+  overflow: hidden;
 }
 .team-section .form-inline input {
   box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
@@ -10334,10 +10334,12 @@ body {
 }
 .slick-dots li.slick-active button:before {
   color:#fff!important;
-  opacity: 100;
+  opacity: 100%!important;
+  font-size: .75rem!important;
 }
 .slick-dots li button:before {
   color:#fff!important;
+  font-size: .75rem!important;
 }
 h2 img {
   opacity: 46%;
@@ -10361,14 +10363,24 @@ h2 img {
   width: 10vw;
   margin-top: 1rem;
   margin-bottom: 1rem;
-  border-top: 1px solid #ACACAC; }
+  border-top: 1px solid #ACACAC;
+  opacity: 50%;
+  margin-left: auto !important;
+  margin-right: auto !important; }
+
 .hr-divider-white {
   width: 10vw;
   margin-top: 1rem;
   margin-bottom: 1rem;
-  border-top: 1px solid #fff; }
+  border-top: 1px solid #fff;
+  opacity: 50%;
+  margin-left: auto;
+  margin-right: auto; }
 
 @media only screen and (max-width: 600px) {
+  #mainNav {
+    background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(83,224,210,0) 100%);
+  }
   .navbar-brand{
     width: 177px;
     height: 47px;
@@ -10383,6 +10395,7 @@ h2 img {
   .masthead h1 {
     text-align: left;
     margin-bottom: 1.5rem;
+    font-weight: bold!important;
   }
   .masthead h2 {
     text-align: left;
@@ -10395,6 +10408,7 @@ h2 img {
   padding: 2rem 1rem;
   background: #088484;
   margin-top: -1vw;
+  text-align: left!important;
   }
   .about-section p{
     text-align: left!important;
@@ -10414,6 +10428,7 @@ h2 img {
   .why-section {
     padding: 2rem 1rem;
     background: #FFFFF7;
+    font-size: 1rem!important;
   }
 
   h3.text-orange {
@@ -10423,10 +10438,16 @@ h2 img {
     display: block!important;
   }
   .slick-dots li.slick-active button:before{
-    color: #000!important;
+    color: #178483!important;
   }
   .slick-dots li button:before {
-    color: #000!important;
+    color: #178483!important;
+  }
+  #slick-team > .slick-dots li.slick-active button:before{
+    color: #fff!important;
+  }
+  #slick-team > .slick-dots li button:before{
+    color: #fff!important;
   }
   .contact-section {
     background: #fff;
@@ -10440,12 +10461,62 @@ h2 img {
     background-size: cover;
   }
   .hr-divider-grey {
-    width: 40vw; }
+    width: 40vw;
+    margin-left: 0;
+    margin-right: 0; }
+
   .hr-divider-white {
-    width: 40vw; }
+    width: 40vw;
+    margin-left: 0;
+    margin-right: 0; }
+
+  .img-quality {
+    height: 75px!important; }
+
+  .txt-09 {
+    font-size: .9rem; }
+
+  .slick-prev:before {
+    margin-left: 2rem;
+  }
+  .slick-next:before {
+    margin-left: -3rem;
+  }
+  .back-resource-team {
+    display: none!important;
+  }
 }
 
 label.invalid{
   font-size: .8rem;
   color:rgb(139, 13, 13);
 }
+
+video {
+  outline: none!important;
+}
+
+::placeholder {
+  color:#3A3A3A!important;
+  opacity: 23%!important;
+}
+
+.block{
+  display: block!important;
+}
+.img-p {
+  padding-bottom: .3rem;
+}
+.img-quality {
+  height: 100px; }
+
+.nav-item {
+    width: 10.5rem;
+}
+
+.back-resource-team {
+  position: absolute;
+  width: 40%;
+  height: auto;
+  left: -24vw;
+  top: -56vh; }
