--- a/css/styles.css
+++ b/css/styles.css
@@ -3949,10 +3949,19 @@ input[type=button].btn-block {
   margin-bottom: 0;
   list-style: none;
 }
+.nav-item {
+  width: auto!important;
+}
 
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
+  color: #fff!important;
+  font-weight: 300;
+  font-size: 1.75rem;
+}
+.nav-link.active{
+  font-weight: bold;
 }
 .nav-link:hover, .nav-link:focus {
   text-decoration: none;
@@ -4067,10 +4076,10 @@ input[type=button].btn-block {
   margin-bottom: 0;
   list-style: none;
 }
-.navbar-nav .nav-link {
+/* .navbar-nav .nav-link {
   padding-right: 0;
   padding-left: 0;
-}
+} */
 .navbar-nav .dropdown-menu {
   position: static;
   float: none;
@@ -5418,9 +5427,6 @@ a.badge-black:focus, a.badge-black.focus {
   font-size: 1.5rem;
   font-weight: 700;
   line-height: 1;
-  color: #000000;
-  text-shadow: 0 1px 0 #fff;
-  opacity: 0.5;
 }
 .close:hover {
   color: #000000;
@@ -10491,6 +10497,42 @@ h2 img {
   .btn {
     font-size: 3.9vw!important;
   }
+  #modal-menu {
+    display: block;
+  }
+  #modal-menu .modal-dialog{
+    margin: 0;
+    margin-right: auto;
+    margin-left: auto;
+    width: 100%;
+  }
+  #modal-menu .modal-content{
+    border:none!important;
+    border-radius: unset!important;
+    height: 100vh;
+  }
+  #modal-menu .modal-header{
+    padding: 2rem 3rem;
+    border-radius: 0% 0% 50% 50% / 0% 0% 8% 8% !important;
+    background: linear-gradient(148deg, rgba(23,132,131,1) 0%, rgba(83,224,210,1) 100%);
+    height: 80vh;
+    display: block!important;
+    z-index: 1;
+    border-bottom: none!important;
+  }
+  #modal-menu .modal-footer{
+    background: #3A3A3A;
+    height: 40vh;
+    padding-bottom: 3rem;
+    margin-top: -20vh;
+    z-index: 0;
+    border-top: none!important;
+    border-bottom-right-radius: unset!important;
+    border-bottom-left-radius: unset!important;
+    align-items: flex-end;
+  }
+
+
 }
 
 label.invalid{
@@ -10517,8 +10559,7 @@ video {
   height: 100px; }
 
 .nav-item {
-    width: 10.5rem;
-}
+    width: 10.5rem; }
 
 .back-resource-team {
   position: absolute;
@@ -10526,3 +10567,7 @@ video {
   height: auto;
   left: -24vw;
   top: -56vh; }
+
+#modal-menu {
+  display: none;
+}
