--- a/slick/slick-theme.css
+++ b/slick/slick-theme.css
@@ -88,11 +88,11 @@
 }
 .slick-prev:before
 {
-    content: '←';
+    content: ''url("../assets/img/left.png")'';
 }
 [dir='rtl'] .slick-prev:before
 {
-    content: '→';
+    content: ''url("../assets/img/right.png")'';
 }
 
 .slick-next
@@ -106,11 +106,11 @@
 }
 .slick-next:before
 {
-    content: '→';
+    content: ''url("../assets/img/right.png")'';
 }
 [dir='rtl'] .slick-next:before
 {
-    content: '←';
+    content: ''url("../assets/img/left.png")'';
 }
 
 /* Dots */
