--- a/css/styles.css
+++ b/css/styles.css
@@ -10123,10 +10123,15 @@ h3 {
 body {
   letter-spacing: 0.0625em;
 }
-
+#page-top {
+  max-width: 100vw;
+  overflow-x:hidden!important;
+}
 #mainNav {
   min-height: 5.5rem;
   background-color: transparent;
+  max-width: 100vw;
+
 }
 #mainNav .navbar-toggler {
   font-size: 200%;
@@ -10380,6 +10385,15 @@ h2 img {
   #mainNav {
     background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(83,224,210,0) 100%);
   }
+  #mainNav.navbar-shrink {
+    background: none;
+    background-color: #fff;
+    color:#000;
+    }
+  #mainNav.navbar-shrink .navbar-brand {
+    background-image: url("../assets/img/logo-lantos-black.svg");
+  }
+  
   .navbar-brand{
     width: 177px;
     height: 47px;
