--- a/css/styles.css
+++ b/css/styles.css
@@ -5507,7 +5507,7 @@ a.close.disabled {
 }
 .modal.fade .modal-dialog {
   transition: transform 0.3s ease-out;
-  transform: translate(250px,0 );
+  transform: translate(0,-250px );
 }
 @media (prefers-reduced-motion: reduce) {
   .modal.fade .modal-dialog {
@@ -7890,6 +7890,10 @@ button.bg-black:focus {
   padding-bottom: 3rem !important;
 }
 
+.pb-6 {
+  padding-bottom: 4rem!important;
+}
+
 .pl-5,
 .px-5 {
   padding-left: 3rem !important;
@@ -10137,7 +10141,6 @@ body {
   font-size: 200%;
   padding: 1rem;
   color: #fff;
-  margin-right: 1rem;
 }
 #mainNav .navbar-toggler:focus {
   outline: none;
@@ -10146,6 +10149,7 @@ body {
   color: #000000;
   font-weight: 700;
   padding: 0.9rem 0;
+  margin-left: 1rem;
 }
 #mainNav .navbar-nav .nav-item:hover {
   outline: none;
@@ -10217,7 +10221,7 @@ body {
   height: auto;
   min-height: 35rem;
   padding: 15rem 0;
-  background: url("../assets/img/black-hero.png");
+  background: url("../assets/img/black-hero.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -10398,7 +10402,7 @@ h2 img {
   #mainNav.navbar-shrink .navbar-brand {
     background-image: url("../assets/img/logo-lantos-black.svg");
   }
-  
+
   .navbar-brand{
     width: 177px;
     height: 47px;
@@ -10525,10 +10529,10 @@ h2 img {
     height: 100vh;
   }
   #modal-menu .modal-header{
-    padding: 2rem 3rem;
+    padding: 2rem 2rem;
     border-radius: 0% 0% 50% 50% / 0% 0% 8% 8% !important;
     background: linear-gradient(148deg, rgba(23,132,131,1) 0%, rgba(83,224,210,1) 100%);
-    height: 80vh;
+    height: 70vh;
     display: block!important;
     z-index: 1;
     border-bottom: none!important;
@@ -10537,7 +10541,7 @@ h2 img {
     background: #3A3A3A;
     height: 40vh;
     padding-bottom: 3rem;
-    margin-top: -20vh;
+    margin-top: -10vh;
     z-index: 0;
     border-top: none!important;
     border-bottom-right-radius: unset!important;
@@ -10567,6 +10571,10 @@ label.invalid{
 
 video {
   outline: none!important;
+}
+
+:focus {
+  outline:none!important;
 }
 
 ::placeholder {
