--- a/css/styles.css
+++ b/css/styles.css
@@ -10540,7 +10540,7 @@ h2 img {
   #modal-menu .modal-footer{
     background: #3A3A3A;
     height: 40vh;
-    padding-bottom: 3rem;
+    padding-bottom: 12vh;
     margin-top: -10vh;
     z-index: 0;
     border-top: none!important;
