--- a/css/styles.css
+++ b/css/styles.css
@@ -10561,6 +10561,9 @@ h2 img {
   .nav-item {
     width: auto!important;
   }
+  .membrane-video{
+    border:none!important;
+  }
 
 }
 
@@ -10608,4 +10611,9 @@ video {
 
 .hidden{
   overflow: hidden;
+}
+
+.membrane-video{
+  box-shadow: 0px 6px 15px #00000029;
+  border: 3px solid #032B2A;
 }
