--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,10 @@
  * Copyright 2011-2020 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+
+ body, html {
+  overflow-x: hidden!important;
+}
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
