--- a/css/styles.css
+++ b/css/styles.css
@@ -10369,6 +10369,9 @@ h2 img {
 .mobile {
   display:none!important;
 }
+.mobile-1000 {
+  display:none!important;
+}
 .medium {
   font-weight: 400;
 }
@@ -10392,6 +10395,13 @@ h2 img {
   opacity: 50%;
   margin-left: auto;
   margin-right: auto; }
+
+
+  @media only screen and (max-width: 1000px) {
+    .mobile-1000 {
+      display: block!important;
+    }
+  }
 
 @media only screen and (max-width: 768px) {
   #mainNav {
