--- a/css/styles.css
+++ b/css/styles.css
@@ -10264,7 +10264,7 @@ body {
 }
 
 .about-section {
-  padding-top: 0;
+  padding-top: 3rem;
   padding-bottom: 5rem;
   background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(22,126,125,1) 100%);
   text-align: center!important;
