--- a/css/styles.css
+++ b/css/styles.css
@@ -10631,3 +10631,6 @@ video {
   box-shadow: 0px 6px 15px #00000029;
   border: 3px solid #032B2A;
 }
+.slick-list.draggable{
+  padding-left:20px;
+}
