--- a/css/styles.css
+++ b/css/styles.css
@@ -11038,9 +11038,9 @@ bottom:50px; */
 .nav-link {
   display: block;
   padding: 0.4rem 1rem;
-  color: #fff !important;
+  color: #fff;
   font-weight: 300;
-  font-size: 1.75rem;
+  font-size: 1.60rem;
 }
 .nav-link.active {
   font-weight: bold;
