--- a/slick/slick-theme.css
+++ b/slick/slick-theme.css
@@ -26,9 +26,9 @@
   top: 20%;
 
   display: block;
-  /* 
-    width: 20px;
-    height: 20px; */
+
+  width: auto;
+  height: auto;
   padding: 0;
   -webkit-transform: translate(0, -50%);
   -ms-transform: translate(0, -50%);
