--- a/css/styles.css
+++ b/css/styles.css
@@ -10771,6 +10771,7 @@ body {
   background-position: 59vw -7vh;
   background-repeat: no-repeat;
   background-size: auto;
+  font-size: .9rem;
 }
 
 .footer {
